--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body {
 
 .app {
     background-color: #fff;
-    width: 300px;
-    height: 500px;
+    width: 500px;
+    height: 700px;
     border: 5px solid #2078b3;
     border-radius: 8px;
     padding: 15px;
@@ -28,12 +28,14 @@ body {
     border-radius: 5px;
     cursor: pointer;
   }
+
 .fa-plus {
     background-color: #2078b34f;
     padding: 3px;
     border:2px solid white;
     border-radius:5px;
   }
+
 #sortBy {
     display: flex;
     justify-content: space-between;
@@ -44,6 +46,7 @@ body {
     margin-top: 5px;
     cursor: pointer;
 }
+
 #selectButton {
         width: 100px;
         height: 30px;
@@ -53,3 +56,31 @@ body {
         background-color: #2078b34f;
         border-radius: 5px;
 }
+
+#tasks {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 14px;
+  }
+  
+  #tasks div {
+    border: 3px solid #2078b3;
+    background-color: #2078b34f;
+    border-radius: 6px;
+    padding: 5px;
+    display: grid;
+    gap: 4px;
+  }
+  
+  #tasks div .options {
+    justify-self: center;
+    display: flex;
+    gap: 20px;
+  }
+  
+  #tasks div .options i {
+    cursor: pointer;
+  }
+#msg {
+    color: red;
+  }
